@startuml

title __LEVEL7's Class Diagram__\n

  namespace decoupling.levels.level7 {
    interface decoupling.levels.level7.Consumer {
        {abstract} + consume()
    }
  }
  

  namespace decoupling.levels.level7 {
    class decoupling.levels.level7.ConsumerImpl {
        + ConsumerImpl()
        + consume()
    }
  }
  

  namespace decoupling.levels.level7 {
    class decoupling.levels.level7.Main {
        {static} + main()
    }
  }
  

  decoupling.levels.level7.ConsumerImpl .up.|> decoupling.levels.level7.Consumer
  decoupling.levels.level7.ConsumerImpl o-- decoupling.levels.level7.service.ServiceA : serviceA
  decoupling.levels.level7.ConsumerImpl o-- decoupling.levels.level7.service.ServiceB : serviceB


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
